--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,8 @@
     <head> <title>Makayla's Computer Science Website</title>
       <link rel="stylesheet" href="style.css">
     </head>
-
+<link
+rel=”stylesheet” href=”style.css”>
     <body>
       <div id="all-contents">
         <nav>
