--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
       <title>Makayla's Website</title>
-      <link rel="stylesheet" href="sytle.css">
+     <link rel="stylesheet" href="style.css">
     </head>
     <body>
      <!--visibble elemtns-->
