--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
     <head>
       <title>Makayla's Website</title>
-     <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="sytle.css">
     </head>
-
+    <body>
+     <!--visibble elemtns-->
+    </body>
   <body>
       <!--all content here-->
       <div id="all contents">
