--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-     <title>Makayla's Computer Science Website</title>
+     <title>Makayla Computer Science Website</title>
      <link rel="stylesheet" href="style.css" />
   </head>
   <body>
