--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -71,7 +71,7 @@
         // TODO 2 - Variable declarations
 var positionX = 0
 positionX = positionX + 10; 
-
+moveBoxTo(positionX)
 
 
 
@@ -95,7 +95,9 @@ positionX = positionX + 10;
          * - increase the speed
          * - move the box to the left side of the screen.
          */
-        function handleBoxClick() {
+        function handleBoxClick(positionX = 0) {
+changeBoxText(0);
+
 
 
 
