--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -72,7 +72,7 @@
 var positionX = 0
 positionX = positionX + 10; 
 moveBoxTo(positionX)
-
+var points = 0;
 
 
 
@@ -82,7 +82,7 @@ moveBoxTo(positionX)
          * If the box drifts off the screen, turn it around!
          */
         function update() {
-
+moveBoxTo(200);
         
 
           
@@ -97,8 +97,8 @@ moveBoxTo(positionX)
          */
         function handleBoxClick(positionX = 0) {
 changeBoxText(0);
-
-
+changeBoxText(points);
+points = points + 1
 
 
 
