--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -70,10 +70,8 @@
 
         // TODO 2 - Variable declarations
 var positionX = 0
-positionX = positionX + 10; 
-moveBoxTo(positionX)
 var points = 0;
-
+var speed = 10
 
 
         /**
@@ -82,9 +80,10 @@ var points = 0;
          * If the box drifts off the screen, turn it around!
          */
         function update() {
-moveBoxTo(200);
-        
 
+        positionX = positionX + speed;
+
+moveBoxTo(positionX);
           
         }
 
@@ -95,11 +94,11 @@ moveBoxTo(200);
          * - increase the speed
          * - move the box to the left side of the screen.
          */
-        function handleBoxClick(positionX = 0) {
-changeBoxText(0);
+        function handleBoxClick() {
+positionX = 0
 changeBoxText(points);
 points = points + 1
-
+speed = speed + 3
 
 
         }
