--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -82,9 +82,18 @@ var speed = 10
         function update() {
 
         positionX = positionX + speed;
-
 moveBoxTo(positionX);
-          
+if(positionX > boardWidth){
+  speed = speed *-1
+}
+
+if(positionX < 0){
+speed *= -1
+      
+
+      }
+
+
         }
 
         /**
